--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -104,6 +104,21 @@ main {
     height: 2000px;
 }
 
+
+#chatWindow{
+    position:fixed;
+    right:50px;
+    bottom:40px;
+    width: 50px;
+    height: 50px;
+    background-color: green;
+    border-radius: 50%;
+}
+
+#frame{
+    display:none;
+}
+
 .new-c {
     font-family: 'Kdam Thmor Pro', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
