--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -117,6 +117,11 @@ main {
 
 #frame{
     display:none;
+    position:fixed;
+    right: 70px;
+    bottom: 70px;
+    width: 300px;
+    height: 400px;
 }
 
 .new-c {
@@ -494,3 +499,4 @@ a {
     margin-right: 35%;
     
 }
+
