--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -115,13 +115,24 @@ main {
     border-radius: 50%;
 }
 
+#chatWindowHide{
+    display: none;
+    position:fixed;
+    right:50px;
+    bottom:40px;
+    width: 50px;
+    height: 50px;
+    background-color: green;
+    border-radius: 50%;
+}
+
 #frame{
     display:none;
     position:fixed;
     right: 70px;
     bottom: 70px;
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 600px;
 }
 
 .new-c {
